feat: initial discord oauth2 login setup.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,11 @@
 # Environment
 ENVIRONMENT=
+PORT=
 
 # Database
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/nimble?schema=public"
+
+# Discord
+DISCORD_OAUTH2_REDIRECT=
+DISCORD_CLIENT_SECRET=
+DISCORD_CLIENT_ID=
