--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "skipLibCheck": true,
     "strictNullChecks": true,
     "paths": {
-      "@/*": ["./src"]
+      "@/*": ["./src/*"]
     }
   }
 }
