--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,8 @@ DATABASE_URL="postgresql://postgres:postgres@localhost:5432/nimble?schema=public
 DISCORD_OAUTH2_REDIRECT=
 DISCORD_CLIENT_SECRET=
 DISCORD_CLIENT_ID=
+
+# Github
+GITHUB_OAUTH2_REDIRECT=
+GITHUB_CLIENT_SECRET=
+GITHUB_CLIENT_ID=
