feat: implementing jwt auth.

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # Environment
 ENVIRONMENT=
 PORT=
+JWT_SECRET=
 
 # Database
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/nimble?schema=public"
