--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ultracite": "5.0.36"
   },
   "dependencies": {
+    "@fastify/jwt": "^9.1.0",
     "@kauzx/logger": "^1.2.0",
     "@prisma/client": "^6.11.1",
     "axios": "^1.10.0",
