--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@kauzx/logger": "^1.2.0",
     "@prisma/client": "^6.11.1",
     "axios": "^1.10.0",
+    "dockerode": "^4.0.7",
     "fastify": "^5.4.0",
     "zod": "^4.0.5"
   }
