feat: creating database package.

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,17 +1,9 @@
 {
-    "extends": "../../tsconfig.base.json",
-    "compilerOptions": {
-      "target": "es2022",
-      "module": "commonjs",
-      "esModuleInterop": true,
-      "forceConsistentCasingInFileNames": true,
-      "strict": true,
-      "skipLibCheck": true,
-      "strictNullChecks": true,
-      "baseUrl": ".",
-      "paths": {
-        "@/*": ["./src/*"]
-      }
+  "extends": "../../tsconfig.base.json",
+  "compilerOptions": {
+    "paths": {
+      "@/*": ["apps/api/src/*"],
+      "@database/*": ["packages/database/*"]
     }
   }
-  
+}
