--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,3 +1,13 @@
 packages:
-  - "apps/*"
-  - "packages/**/"
+  - apps/*
+  - packages/**/
+
+onlyBuiltDependencies:
+  - '@database/generated'
+  - '@prisma/client'
+  - '@prisma/engines'
+  - cpu-features
+  - esbuild
+  - prisma
+  - protobufjs
+  - ssh2
