--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,6 +1,8 @@
 {
-  "$schema": "https://biomejs.dev/schemas/2.1.1/schema.json",
-  "extends": ["ultracite"],
+  "$schema": "https://biomejs.dev/schemas/2.1.2/schema.json",
+  "extends": [
+    "ultracite"
+  ],
   "linter": {
     "rules": {
       "suspicious": {
