feat: creating docker and queue packages.

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "paths": {
       "@/*": ["apps/api/src/*"],
-      "@database/*": ["packages/database/*"]
+      "@database/*": ["packages/database/*"],
+      "@queue/*": ["packages/queue/src/"]
     }
   }
 }
