feat: implementing app deployment.

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -15,3 +15,7 @@ DISCORD_CLIENT_ID=
 GITHUB_OAUTH2_REDIRECT=
 GITHUB_CLIENT_SECRET=
 GITHUB_CLIENT_ID=
+
+# Redis Queue Connection
+DEPLOY_QUEUE_HOST=localhost
+DEPLOY_QUEUE_PORT=6379
