--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -4,7 +4,8 @@
     "paths": {
       "@/*": ["apps/api/src/*"],
       "@database/*": ["packages/database/*"],
-      "@queue/*": ["packages/queue/src/"]
+      "@queue": ["packages/queue/src/"],
+      "@core/*": ["packages/core/src/*"]
     }
   }
 }
