--- a/apps/deploy-worker/.env.example
+++ b/apps/deploy-worker/.env.example
@@ -1,3 +1,6 @@
+# Database
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/nimble?schema=public"
+
 # Redis Connection
-DEPLOY_QUEUE_HOST=
-DEPLOY_QUEUE_PORT=
+DEPLOY_QUEUE_HOST=localhost
+DEPLOY_QUEUE_PORT=6379
